# inmanta-module-factory

./: .gitignore  CHANGELOG.md  Jenkinsfile  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.ci/: Jenkinsfile-integration-test
.github/: dependabot.yml
src/inmanta_module_factory/: __init__.py  builder.py
src/inmanta_module_factory/helpers/: const.py  utils.py
src/inmanta_module_factory/inmanta/: attribute.py  entity.py  entity_field.py  entity_relation.py  implement.py  implementation.py  index.py  typedef.py  types.py
src/inmanta_module_factory/inmanta/modules/: std.py
tests/: test_extended_implement.py  test_foreign_imports.py  test_relation_index.py  test_simple_module.py  test_typedefs.py  test_upgrade_module.py
